--- a/index.html
+++ b/index.html
@@ -4,20 +4,49 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge">
-		<link rel="stylesheet" href="">
-		<title></title>
+		<link href="https://fonts.googleapis.com/css?family=Playfair+Display|Roboto:300" rel="stylesheet">
+		<link rel="stylesheet" type="text/css" href="icomoon/style.css">
+		<link rel="stylesheet" href="main.css">
+		<title>Tipografía e Iconos | Fiorella Quispe</title>
 	</head>
 	<body>
-		<header>
-			<h1></h1>
-		</header>
+		<div class="contenedor">
+			<div class="box uno">
+				<span  class="icon-paper-plane paperPlane"></span>
+				<h2>Un avión de papel</h2>
+				<h5>Perfecto</h5>
+				<p>Cuando todo parezca ir en tu contra, recuerda que los aviones vuelan en contra del viento no a favor de él</p>
+				<cite>- Henry Ford</cite>
+			</div>
+			<div class="box dos">
+				<span  class="icon-diamond diamond"></span>
+				<h2>¿Conoces Ruby?</h2>
+				<h5>Lenguaje de programación</h5>
+				<p>Sus fanáticos lo tienen como un lenguaje hermoso y artístico. Y todavía así, dicen que es práctico y ameno.</p>
+				<cite>- Yukihiro Matsumoto</cite>
+			</div>
+			<div class="box tres">
+				<span  class="icon-heart heart"></span>
+				<h2>I do CSS and HTML</h2>
+				<h5>For living</h5>
+				<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.</p>
+				<cite>- Cicero 45 a.C.</cite>
+			</div>
+			<div class="box cuatro">
+				<span  class="icon-local_cafe cafe"></span>
+				<h2>La vida comienza</h2>
+				<h5>Después de un café</h5>
+				<p>Detrás de cada mujer exitosa hay una cantidad substancial de café</p>
+				<cite>- Stephanie Piro</cite>
+			</div>
+			<div class="box cinco">
+				<span  class="icon-food food"></span>
+				<h2>Platito de comida</h2>
+				<h5>Ñomi Ñomi</h5>
+				<p>Todo lo que hay en esta sala es comestible. Hasta yo lo soy. Pero eso sería canibalismo, mis niños, y está mal visto en la mayoría de las sociedades</p>
+				<cite>- Willy Wonka</cite>
+			</div>
+		</div>
 
-		<section>
-		</section>
-
-		<footer>
-		</footer>
-
-		<script type="text/javascript" src=""></script>
 	</body>
 </html>
